# gwGenealogy

./: .gitignore  CODEMAP.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/source/: citation.rst  conf.py  index.rst  installation.rst  quickstart.rst
gwGenealogy/: __init__.py
gwGenealogy/agn/: __init__.py
gwGenealogy/analysis/: __init__.py  imbh_probability.py  model_comparison.py
gwGenealogy/binaries/: __init__.py  bbh.py  bbh_gwtc.py  bbh_masses.py  bbh_redshifts.py  bbh_remnant.py  bbh_spins.py  smbbh.py
gwGenealogy/clusters/: __init__.py  generations.py  plotting.py  plummer.py
gwGenealogy/core/: __init__.py  conversions.py  coordinates.py  distributions.py  generations.py  hierarchical.py  mass_distributions.py  pairing.py  plotting.py  progenitor.py  rcparams.py  redshift.py  retention.py  seed_growth.py  (+2 more)
tests/: conftest.py  test_progenitor.py  test_remnant_kicks.py  test_reproducibility.py
tutorials/: 01_distributions.ipynb  02_stellar_evolution.ipynb  03_bbh_nonprecessing.ipynb  04_bbh_precessing.ipynb  05_gwtc_populations.ipynb  06_retention_probability.ipynb  07_host_environments.ipynb  08_hierarchical_mergers.ipynb  09_seed_growth.ipynb  10_displacement_return_times.ipynb  11_single_cluster_mergers.ipynb  12_runaway_smbh_progenitor.ipynb  1g_1g_mergers.ipynb  bbh_remnant_demo.ipynb  bhpt_pn_newtonian_kicks.ipynb  environments_retention.ipynb  escape_velocity.ipynb  final_bbh_kick_precessing_CLZM2007.ipynb  final_bbh_remnants_NRSur7dq4EmriRemnant.ipynb  final_bbh_surrogate.ipynb  final_bbh_surrogate_vs_rit.ipynb
(+62 files in other folders)
